[package]
name = "leif"
version = "0.1.0"
authors = ["Tom <tom.meyer89@gmail.com>"]

[dependencies]
get_if_addrs = "0.5.3"
serde = "1.0.70"
serde_json = "1.0.22"
serde_derive = "1.0.70"
bincode = "1.0.1"
ron = "0.3.0"
conv = "0.3.3"
bytes = "0.4.8"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
simple_logger = "0.5.0"
tokio = "0.1.7"
tokio-io = "0.1"
futures = "0.1"
tokio-codec = "0.1.0"
tokio-timer = "0.2.4"
mio = "0.6.15"